<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_leitura">


    <fragment
        android:id="@+id/nav_leitura"
        android:name="br.com.raspemania.view.fragment.LeituraFragment"
        android:label="@string/leitura"
        tools:layout="@layout/fragment_leitura" />

   <!-- <fragment
        android:id="@+id/nav_home"
        android:name="br.com.raspemania.view.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />-->

    <fragment
        android:id="@+id/nav_colaborador"
        android:name="br.com.raspemania.view.fragment.ColaboradorFragment"
        android:label="@string/colaborador"
        tools:layout="@layout/fragment_colaborador" />

    <fragment
        android:id="@+id/nav_cliente"
        android:name="br.com.raspemania.view.fragment.ClienteFragment"
        android:label="@string/cliente"
        tools:layout="@layout/fragment_cliente" />

    <fragment
        android:id="@+id/nav_relatorio"
        android:name="br.com.raspemania.view.fragment.RelatorioFragment"
        android:label="@string/relatorios"
        tools:layout="@layout/fragment_relatorio" />

    <fragment
        android:id="@+id/nav_rota"
        android:name="br.com.raspemania.view.fragment.RotaFragment"
        android:label="@string/rota"
        tools:layout="@layout/fragment_rota" />

    <fragment
        android:id="@+id/nav_produto"
        android:name="br.com.raspemania.view.fragment.ProdutoFragment"
        android:label="@string/produto"
        tools:layout="@layout/fragment_produto" />

</navigation>